fix scrollbar issue

--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -50,6 +50,7 @@ body {
 
 h1, h2, h3 {
   font-weight: 400;
+  overflow: hidden;
 }
 
 .openers {
@@ -72,7 +73,7 @@ h1, h2, h3 {
   align-items: center;
   text-align: center;
   justify-content: center;
-  overflow: hidden;
+  overflow-x: hidden;
 
   &__name {
     font-size: 5rem;
@@ -181,8 +182,6 @@ h1, h2, h3 {
 }
 
 @media only screen and (max-width: 768px) {
-  #bio {
-  }
 
   .about {
     margin: 50px auto auto;
